[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]

[project]
name = "gspy"
authors = [
    { name = "Leon Foks", email = "nfoks@contractor.usgs.gov" },
    { name = "Stephanie James", email = "sjames@usgs.gov" },
    { name = "Burke Minsley", email = "bminsley@usgs.gov" }
]
description = "gspy converts commonly used data formats into a netcdf file honoring our GS convention."
dynamic = ["version", "dependencies", "urls"]
keywords = ["netcdf", "xarray"]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering'
]

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"

# Version control
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "gspy/_version.py"

[tool.hatch.metadata.hooks.vcs]

[tool.hatch.metadata.hooks.vcs.urls]
Documentation = "https://usgs.github.io/gspy/"
Issues = "https://https://github.com/usgs/gspy/issues"
Source = "https://https://github.com/usgs/gspy"
Homepage = "https://usgs.github.io/gspy/"
source_archive = "https://usgs.github.io/gspy/archive/{commit_hash}.zip"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["gspy"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "gspy/examples"
